# code-generation

./: README.md  frr_northbound_pb2.py  test_harness.py
nvue-open-api-specification-for-cumulus-linux-5-1-0-client/: README.md  open_test_harness.py  pyproject.toml
nvue-open-api-specification-for-cumulus-linux-5-1-0-client/nvue_open_api_specification_for_cumulus_linux_5_1_0_client/: __init__.py
nvue-open-api-specification-for-cumulus-linux-5-1-0-client/nvue_open_api_specification_for_cumulus_linux_5_1_0_client/api/acl/: delete_acl.py  delete_acl_rule.py  delete_acl_rule_action.py  delete_acl_rule_action_deny.py  delete_acl_rule_action_erspan.py  delete_acl_rule_action_log.py  delete_acl_rule_action_permit.py  delete_acl_rule_action_police.py  delete_acl_rule_action_set.py  delete_acl_rule_match.py  delete_acl_rule_match_ip.py  delete_acl_rule_match_ip_d_port.py  delete_acl_rule_match_ip_d_ports.py  delete_acl_rule_match_ip_ecn.py  delete_acl_rule_match_ip_ecn_flags.py  delete_acl_rule_match_ip_fragment.py  delete_acl_rule_match_ip_s_port.py  delete_acl_rule_match_ip_s_ports.py  delete_acl_rule_match_ip_tcp.py  delete_acl_rule_match_ip_tcp_flags.py  delete_acl_rule_match_ip_tcp_mask.py  delete_acl_rule_match_mac.py  delete_acl_rules.py  delete_acls.py  get_acl.py  get_acl_rule.py  get_acl_rule_action.py  get_acl_rule_action_deny.py  get_acl_rule_action_erspan.py  get_acl_rule_action_log.py  get_acl_rule_action_permit.py  get_acl_rule_action_police.py  get_acl_rule_action_set.py  get_acl_rule_match.py  get_acl_rule_match_ip.py  get_acl_rule_match_ip_d_port.py  (+36 more)
(+1619 files in other folders)
